--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "cors": "^2.8.5",
     "firebase": "^10.5.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
