--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^10.5.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
