--- a/package.json
+++ b/package.json
@@ -42,18 +42,22 @@
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.11",
     "@types/jquery": "^3.5.29",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "angular-cli-ghpages": "^0.6.2",
     "eslint": "^8.51.0",
     "jasmine-core": "~4.6.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "mocha": "^10.2.0",
     "typescript": "~5.1.3"
   }
 }
